--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,9 @@
 <html lang="en">
 
 <head>
-    <title>Express</title>
-    <script src="/js/bundle.js"></script>
+    <title>Landing page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
+    <link rel="stylesheet" href="/template.css">
 </head>
 
 <body>
