Add some content

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,17 +8,99 @@
 
 <body>
 
-<div class="container">
-    <div class="">
+<div class="header">
+    <div class="container">
+        <div class="flex">
 
-    </div>
-    <div>
-        <h1>Express</h1>
-        <p class="text">Welcome to Express</p>
+            <div>
+                <h1 class="title">
+                    Lorem ipsum dolor sit
+                    amet, consectetuer
+                    adipiscing elit illum
+                </h1>
+                <p class="description">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret. At vel accusata corrumpit, id dico
+                </p>
+                <a href="#" class="button">Read more</a>
+            </div>
 
-        <p><i class="fa fa-search"></i></p>
+        </div>
     </div>
 </div>
+
+<div class="content">
+
+    <div class="container">
+        <div class="search">
+            <input type="search" class="search__input" id="search" placeholder="ПОИСК ПО САЙТУ">
+            <label for="search" class="fa fa-search search__icon"></label>
+        </div>
+
+        <div class="catalog-flex">
+            <div>
+                <a class="catalog-item" href="#">
+                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__caption">
+                        <div class="catalog-item__caption-text">Text on hover</div>
+                    </div>
+                </a>
+            </div>
+
+            <div>
+                <a class="catalog-item catalog-item_favourite" href="#">
+                    <div class="catalog-item__image" style="background-image:url('/images/jazmin-quaynor-392995_small.jpg');"></div>
+                    <div class="catalog-item__caption">
+                        <div class="catalog-item__caption-text">Another text on hover</div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div>
+                <a class="catalog-item" href="#">
+                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__caption">
+                        <div class="catalog-item__caption-text">My text on hover</div>
+                    </div>
+                </a>
+            </div>
+
+            <div>
+                <a class="catalog-item" href="#">
+                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__caption">
+                        <div class="catalog-item__caption-text">Good text on hover</div>
+                    </div>
+                </a>
+            </div>
+
+            <div>
+                <a class="catalog-item" href="#">
+                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__caption">
+                        <div class="catalog-item__caption-text">Hover text</div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<div class="footer">
+
+    <div class="container">
+        <div class="box">
+            <i class="box__icon box__icon_type_game"></i>
+            A great advertising slogan with a lot of words.
+            A great advertising slogan with a lot of words.
+            A great advertising slogan with a lot of words.
+        </div>
+    </div>
+</div>
+
+<script src="/scripts/bundle.js"></script>
 
 </body>
 
