--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,10 +31,14 @@
 <div class="content">
 
     <div class="container">
-        <div class="search">
-            <input type="search" class="search__input" id="search" placeholder="ПОИСК ПО САЙТУ">
-            <label for="search" class="fa fa-search search__icon"></label>
-        </div>
+
+        <form action="/" method="get" class="search">
+            <input type="search" name="search" class="search__input" placeholder="ПОИСК ПО САЙТУ" required>
+
+            <button type="submit" class="search__icon">
+                <i class="fa fa-search"></i>
+            </button>
+        </form>
 
         <div class="catalog-flex">
             <div>
