Update header content

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,25 +8,38 @@
 
 <body>
 
-<div class="header">
-    <div class="container">
-        <div class="flex">
+    <!--    <div class="container">-->
+    <div class="header">
 
-            <div>
-                <h1 class="title">
-                    Lorem ipsum dolor sit
-                    amet, consectetuer
-                    adipiscing elit illum
-                </h1>
-                <p class="description">
+        <div class="header_level_main">
+            <div class="header__item teaser">
+                <h1 class="teaser__title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h1>
+                <p class="teaser__description">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret. At vel accusata corrumpit, id dico
                 </p>
-                <a href="#" class="button">Read more</a>
+                <a href="#" class="teaser__button">Read more</a>
+
+                <div class="teaser__image" style="background-image:url('/images/avi-richards-183715_normal.jpg');"></div>
+            </div>
+        </div>
+
+        <div class="header_level_secondary">
+            <div class="header__item teaser">
+                <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h2>
+                <p class="teaser__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret.</p>
+
+                <div class="teaser__image" style="background-image:url('/images/markus-spiske-357131_normal.jpg');"></div>
             </div>
 
+            <div class="header__item teaser">
+                <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing</h2>
+
+                <div class="teaser__image" style="background-image:url('/images/charles-deluvio-456501_normal.jpg');"></div>
+            </div>
         </div>
+
     </div>
-</div>
+    <!--    </div>-->
 
 <div class="content">
 
