--- a/src/html/index.html
+++ b/src/html/index.html
@@ -110,9 +110,7 @@
     <div class="container">
         <div class="box">
             <i class="box__icon box__icon_type_game"></i>
-            A great advertising slogan with a lot of words.
-            A great advertising slogan with a lot of words.
-            A great advertising slogan with a lot of words.
+            A great advertising slogan with a lot of words
         </div>
     </div>
 </div>
