Make relative urls inside html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Landing page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
-    <link rel="stylesheet" href="/template.css">
+    <link rel="stylesheet" href="template.css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 
     <div class="container">
 
-        <form action="/" method="get" class="search">
+        <form action="index.html" method="get" class="search">
             <input type="search" name="search" class="search__input" placeholder="ПОИСК ПО САЙТУ" required>
 
             <button type="submit" class="search__icon">
@@ -56,7 +56,7 @@
         <div class="catalog-flex">
             <div>
                 <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
                         <div class="catalog-item__caption-text">Text on hover</div>
                     </div>
@@ -65,7 +65,7 @@
 
             <div>
                 <a class="catalog-item catalog-item_favourite" href="#">
-                    <div class="catalog-item__image" style="background-image:url('/images/jazmin-quaynor-392995_small.jpg');"></div>
+                    <div class="catalog-item__image" style="background-image:url('images/jazmin-quaynor-392995_small.jpg');"></div>
                     <div class="catalog-item__caption">
                         <div class="catalog-item__caption-text">Another text on hover</div>
                     </div>
@@ -75,7 +75,7 @@
 
             <div>
                 <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
                         <div class="catalog-item__caption-text">My text on hover</div>
                     </div>
@@ -84,7 +84,7 @@
 
             <div>
                 <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
                         <div class="catalog-item__caption-text">Good text on hover</div>
                     </div>
@@ -93,7 +93,7 @@
 
             <div>
                 <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('/images/pedro-lastra-157071_small.jpg');"></div>
+                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
                         <div class="catalog-item__caption-text">Hover text</div>
                     </div>
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<script src="/scripts/bundle.js"></script>
+<script src="scripts/bundle.js"></script>
 
 </body>
 
