Improve catalog part

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,17 +53,17 @@
             </button>
         </form>
 
-        <div class="catalog-flex">
-            <div>
+        <div class="catalog">
+            <div class="catalog__child">
                 <a class="catalog-item" href="#">
                     <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Text on hover</div>
+                        <div class="catalog-item__caption-text">Good text on hover</div>
                     </div>
                 </a>
             </div>
 
-            <div>
+            <div class="catalog__child catalog__child_order-tablet_first">
                 <a class="catalog-item catalog-item_favourite" href="#">
                     <div class="catalog-item__image" style="background-image:url('images/jazmin-quaynor-392995_small.jpg');"></div>
                     <div class="catalog-item__caption">
@@ -73,7 +73,7 @@
             </div>
 
 
-            <div>
+            <div class="catalog__child">
                 <a class="catalog-item" href="#">
                     <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
@@ -82,16 +82,16 @@
                 </a>
             </div>
 
-            <div>
+            <div class="catalog__child">
                 <a class="catalog-item" href="#">
                     <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Good text on hover</div>
+                        <div class="catalog-item__caption-text">Text on hover</div>
                     </div>
                 </a>
             </div>
 
-            <div>
+            <div class="catalog__child">
                 <a class="catalog-item" href="#">
                     <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
                     <div class="catalog-item__caption">
