Improve header part

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,35 +6,53 @@
     <link rel="stylesheet" href="template.css">
 </head>
 
-<body>
+<body class="page">
 
-    <!--    <div class="container">-->
-    <div class="header">
+<div class="header slider">
 
-        <div class="header_level_main">
-            <div class="header__item teaser">
+    <div class="header_side_left">
+
+        <div class="header__item slider__item slider__item_active">
+
+            <div class="teaser teaser_pos_left teaser_transform_right-top">
+                <div class="teaser__image-wrap slider__image-wrap">
+                    <div class="teaser__image slider__image" style="background-image:url('images/avi-richards-183715_normal.jpg');"></div>
+                </div>
+
                 <h1 class="teaser__title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h1>
                 <p class="teaser__description">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret. At vel accusata corrumpit, id dico
                 </p>
-                <a href="#" class="teaser__button">Read more</a>
+                <a href="#" class="button button_color_white teaser__button">Read more</a>
 
-                <div class="teaser__image" style="background-image:url('/images/avi-richards-183715_normal.jpg');"></div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="header_side_right">
+
+        <div class="header__item slider__item">
+
+            <div class="teaser teaser_pos_top teaser_pos_right teaser_transform_left-bottom">
+                <div class="teaser__image-wrap slider__image-wrap">
+                    <div class="teaser__image slider__image" style="background-image:url('images/markus-spiske-357131_normal.jpg');"></div>
+                </div>
+
+                <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h2>
+                <p class="teaser__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret.</p>
             </div>
         </div>
 
-        <div class="header_level_secondary">
-            <div class="header__item teaser">
-                <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h2>
-                <p class="teaser__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret.</p>
+        <div class="header__item slider__item">
 
-                <div class="teaser__image" style="background-image:url('/images/markus-spiske-357131_normal.jpg');"></div>
-            </div>
+            <div class="teaser teaser_pos_bottom teaser_pos_right teaser_transform_closer">
+                <div class="teaser__image-wrap slider__image-wrap">
+                    <div class="teaser__image slider__image" style="background-image:url('images/charles-deluvio-456501_normal.jpg');"></div>
+                </div>
 
-            <div class="header__item teaser">
                 <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing</h2>
-
-                <div class="teaser__image" style="background-image:url('/images/charles-deluvio-456501_normal.jpg');"></div>
             </div>
         </div>
 
