--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,7 +57,12 @@
         </div>
 
     </div>
-    <!--    </div>-->
+
+    <div class="toolbar">
+        <div class="toolbar__button toolbar__button_active" data-item="1"></div>
+        <div class="toolbar__button" data-item="2"></div>
+        <div class="toolbar__button" data-item="3"></div>
+    </div>
 
 <div class="content">
 
