--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 
 <body class="page">
 
-<div class="header slider">
+<div class="header slider slider_active_1">
 
     <div class="header_side_left">
 
@@ -64,7 +64,8 @@
         <div class="toolbar__button" data-item="3"></div>
     </div>
 
-<div class="content">
+</div>
+
 
     <div class="container">
 
@@ -125,7 +126,6 @@
 
         </div>
 
-    </div>
 </div>
 
 <div class="footer">
