--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,64 +67,64 @@
 </div>
 
 
-    <div class="container">
+<div class="container">
 
-        <form action="index.html" method="get" class="search">
-            <input type="search" name="search" class="search__input" placeholder="ПОИСК ПО САЙТУ" required>
+    <form action="index.html" method="get" class="search">
+        <input type="search" name="search" class="search__input" placeholder="ПОИСК ПО САЙТУ" required>
 
-            <button type="submit" class="search__icon">
-                <i class="fa fa-search"></i>
-            </button>
-        </form>
+        <button type="submit" class="search__icon">
+            <i class="fa fa-search"></i>
+        </button>
+    </form>
 
-        <div class="catalog">
-            <div class="catalog__child">
-                <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
-                    <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Good text on hover</div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="catalog__child catalog__child_order-tablet_first">
-                <a class="catalog-item catalog-item_favourite" href="#">
-                    <div class="catalog-item__image" style="background-image:url('images/jazmin-quaynor-392995_small.jpg');"></div>
-                    <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Another text on hover</div>
-                    </div>
-                </a>
-            </div>
-
-
-            <div class="catalog__child">
-                <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
-                    <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">My text on hover</div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="catalog__child">
-                <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
-                    <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Text on hover</div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="catalog__child">
-                <a class="catalog-item" href="#">
-                    <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
-                    <div class="catalog-item__caption">
-                        <div class="catalog-item__caption-text">Hover text</div>
-                    </div>
-                </a>
-            </div>
-
+    <div class="catalog">
+        <div class="catalog__child">
+            <a class="catalog-item" href="#">
+                <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
+                <div class="catalog-item__caption">
+                    <div class="catalog-item__caption-text">Good text on hover</div>
+                </div>
+            </a>
         </div>
+
+        <div class="catalog__child catalog__child_order-tablet_first ">
+            <a class="catalog-item catalog-item_favourite catalog-item_height-mobile_larger" href="#">
+                <div class="catalog-item__image" style="background-image:url('images/jazmin-quaynor-392995_small.jpg');"></div>
+                <div class="catalog-item__caption">
+                    <div class="catalog-item__caption-text">Another text on hover</div>
+                </div>
+            </a>
+        </div>
+
+
+        <div class="catalog__child">
+            <a class="catalog-item" href="#">
+                <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
+                <div class="catalog-item__caption">
+                    <div class="catalog-item__caption-text">My text on hover</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="catalog__child">
+            <a class="catalog-item" href="#">
+                <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
+                <div class="catalog-item__caption">
+                    <div class="catalog-item__caption-text">Text on hover</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="catalog__child">
+            <a class="catalog-item" href="#">
+                <div class="catalog-item__image" style="background-image:url('images/pedro-lastra-157071_small.jpg');"></div>
+                <div class="catalog-item__caption">
+                    <div class="catalog-item__caption-text">Hover text</div>
+                </div>
+            </a>
+        </div>
+
+    </div>
 
 </div>
 
