Refactor some html code

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
 
 <body class="page">
 
-<div class="header slider slider_active_1">
+<div class="header slider">
 
     <div class="header_side_left">
 
@@ -42,7 +42,9 @@
                 </div>
 
                 <h2 class="teaser__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum</h2>
-                <p class="teaser__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret.</p>
+                <p class="teaser__description">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit illum neglegentur his, vis at facer elaboraret.
+                </p>
             </div>
         </div>
 
