Update box module

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -135,7 +135,7 @@
 
     <div class="container">
         <div class="box">
-            <i class="box__icon box__icon_type_game"></i>
+            <i class="box__icon box__icon_type_game box__icon_hidden-tablet"></i>
             <div class="box__text">A great advertising slogan with a lot of words</div>
         </div>
     </div>
